@@ -26,6 +26,7 @@ import com.google.common.graph.Graph;
 import org.apache.commons.collections.map.HashedMap;
 import org.graylog.testing.mongodb.MongoDBFixtures;
 import org.graylog.testing.mongodb.MongoDBInstance;
+import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
 import org.graylog2.contentpacks.EntityDescriptorIds;
 import org.graylog2.contentpacks.model.ModelId;
 import org.graylog2.contentpacks.model.ModelTypes;
@@ -42,6 +43,7 @@ import org.graylog2.contentpacks.model.entities.NativeEntity;
 import org.graylog2.contentpacks.model.entities.references.ReferenceMapUtils;
 import org.graylog2.contentpacks.model.entities.references.ValueReference;
 import org.graylog2.contentpacks.model.entities.references.ValueType;
+import org.graylog2.database.MongoCollections;
 import org.graylog2.database.NotFoundException;
 import org.graylog2.database.entities.DefaultEntityScope;
 import org.graylog2.events.ClusterEventBus;
@@ -141,7 +143,7 @@ public class InputFacadeTest {
                 Executors.newScheduledThreadPool(1));
         final ExtractorFactory extractorFactory = new ExtractorFactory(metricRegistry, grokPatternRegistry, lookupTableService);
         final ConverterFactory converterFactory = new ConverterFactory(lookupTableService);
-        inputService = new InputServiceImpl(mongodb.mongoConnection(), extractorFactory, converterFactory, messageInputFactory, clusterEventBus, new ObjectMapperProvider().get());
+        inputService = new InputServiceImpl(new MongoCollections(new MongoJackObjectMapperProvider(objectMapper), mongodb.mongoConnection()), extractorFactory, converterFactory, messageInputFactory, clusterEventBus, new ObjectMapperProvider().get());
         final InputRegistry inputRegistry = new InputRegistry();
         Set<PluginMetaData> pluginMetaData = new HashSet<>();
         Map<String, MessageInput.Factory<? extends MessageInput>> inputFactories = new HashMap<>();
@@ -179,7 +181,12 @@ public class InputFacadeTest {
                 MessageInput.FIELD_TYPE, "org.graylog2.inputs.raw.udp.RawUDPInput",
                 MessageInput.FIELD_CONFIGURATION, Collections.emptyMap()
         );
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .getTitle("Input Title")
+                .getType("org.graylog2.inputs.raw.udp.RawUDPInput")
+                .getConfiguration(Collections.emptyMap())
+                .build();
+
         final ImmutableList<Extractor> extractors = ImmutableList.of();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, extractors);
         final EntityDescriptor descriptor = EntityDescriptor.create(input.getId(), ModelTypes.INPUT_V1);
@@ -199,13 +206,12 @@ public class InputFacadeTest {
 
     @Test
     public void exportNativeEntityWithEncryptedValues() {
-        final ImmutableMap<String, Object> fields = ImmutableMap.of(
-                MessageInput.FIELD_TITLE, "Input Title",
-                MessageInput.FIELD_TYPE, "org.graylog2.inputs.misc.jsonpath.JsonPathInput",
-                MessageInput.FIELD_CONFIGURATION,
-                Map.of("encrypted_value",
-                        new EncryptedValueService(UUID.randomUUID().toString()).encrypt("secret")));
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .getTitle("Input Title")
+                .getType("org.graylog2.inputs.misc.jsonpath.JsonPathInput")
+                .getConfiguration(Map.of("encrypted_value",
+                        new EncryptedValueService(UUID.randomUUID().toString()).encrypt("secret")))
+                .build();
         final ImmutableList<Extractor> extractors = ImmutableList.of();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, extractors);
         final EntityDescriptor descriptor = EntityDescriptor.create(input.getId(), ModelTypes.INPUT_V1);
@@ -288,7 +294,9 @@ public class InputFacadeTest {
         final ImmutableMap<String, Object> fields = ImmutableMap.of(
                 "title", "Dashboard Title"
         );
-        final InputImpl input = new InputImpl(fields);
+        final InputImpl input = InputImpl.builder()
+                .getTitle("Dashboard Title")
+                .build();
         final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input);
         final EntityExcerpt excerpt = facade.createExcerpt(inputWithExtractors);
 
@@ -472,7 +480,7 @@ public class InputFacadeTest {
                 ValueReference.of(Converter.Type.LOOKUP_TABLE.name()), ReferenceMapUtils.toReferenceMap(lookupTableConfig));
         final List<ConverterEntity> converterEntities = new ArrayList<>(1);
         converterEntities.add(converterEntity);
-        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input));
+        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input.getId()));
         final LookupTableExtractor extractor = (LookupTableExtractor) inputWithExtractors.extractors().iterator().next();
         final ExtractorEntity extractorEntity = ExtractorEntity.create(
                 ValueReference.of(extractor.getTitle()),
@@ -550,7 +558,7 @@ public class InputFacadeTest {
     @MongoDBFixtures("InputFacadeTest.json")
     public void resolveForInstallationGrokPattern() throws NotFoundException {
         final Input input = inputService.find("5ae2ebbeef27464477f0fd8b");
-        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input));
+        final InputWithExtractors inputWithExtractors = InputWithExtractors.create(input, inputService.getExtractors(input.getId()));
         final GrokExtractor grokExtractor = (GrokExtractor) inputWithExtractors.extractors().iterator().next();
         final ExtractorEntity extractorEntity = ExtractorEntity.create(
                 ValueReference.of(grokExtractor.getTitle()),
